Fix line wrapping issue with flexbox in IE

--- a/_partials/sass/components/_c-panels.scss
+++ b/_partials/sass/components/_c-panels.scss
@@ -76,6 +76,7 @@ Panels require a modifier tag to gain most of their style (background and text c
     display: block;
     top: 0;
     transition: all .1s ease-out;
+    width: 100%;
 }
 
 .panel--link:hover,
