--- a/css/main.css
+++ b/css/main.css
@@ -2453,6 +2453,7 @@ Panels require a modifier tag to gain most of their style (background and text c
   top: 0;
   -webkit-transition: all .1s ease-out;
   transition: all .1s ease-out;
+  width: 100%;
 }
 
 .panel--link:hover,
